...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="Event name"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.159"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerTitleText" />

            <EditText
                android:id="@+id/eventAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="Event address"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.159"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventName" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="start|top"
...
                android:onClick="eTimePickerClick"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startTimeText" />


            <Button
                android:id="@+id/inboxButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
...
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/myEventsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
...
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/inboxButton" />

            <Button
                android:id="@+id/hostedEventsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
...
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerTitleText" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="287dp"
                android:layout_height="44dp"
                android:text="Confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
