<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"

    tools:context="csci310.team53.easyteamup.activities.HomeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRecyclerView"

        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:scrollbars="vertical"

        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEventButton" />

    <Button
        android:id="@+id/inboxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:icon="@drawable/ic_mail"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/myEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:icon="@drawable/ic_events"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inboxButton" />

    <Button
        android:id="@+id/hostedEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:icon="@drawable/ic_host"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:icon="@drawable/ic_home"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myEventsButton" />

    <Button
        android:id="@+id/userProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:icon="@drawable/ic_profile"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/homeRecyclerView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_map"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toStartOf="@+id/userProfileButton"
        app:layout_constraintStart_toEndOf="@+id/createEventButton"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>