...
    android:clickable="true"
    tools:context="csci310.team53.easyteamup.activities.InboxActivity"

    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inboxRecyclerView"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"

        android:clickable="true"
...
